2024-01-17T16:20:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7558675179 # 32
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-17
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 841 1539 / 849 1550
* notice: next accum: outdated-unq outdated-all / unq all: 841 1539 / 850 1551
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-17]

2024-01-15T16:20:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7531555148 # 26
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 840 1537 / 849 1550
* notice: next accum: outdated-unq outdated-all / unq all: 841 1539 / 849 1550
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-01] / []

2024-01-14T16:18:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7520350750 # 23
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 839 1536 / 849 1550
* notice: next accum: outdated-unq outdated-all / unq all: 840 1537 / 849 1550
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-31] / []

2024-01-12T16:20:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7504719256 # 17