@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-17T16:20:47Z",
+  "timestamp" : "2024-01-18T08:19:39Z",
   "count_outdated" : 1539,
   "uniques_outdated" : 841,
-  "count" : 1551,
-  "uniques" : 850,
+  "count" : 1552,
+  "uniques" : 851,
   "clones" : [
     {
       "timestamp": "2024-01-05T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2024-01-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
