@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 3,
   "clones": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2024-01-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-18T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
